--- a/src/pages/CV/CV.module.css
+++ b/src/pages/CV/CV.module.css
@@ -386,4 +386,8 @@
     flex-direction: column;
     gap: 0.2rem;
   }
+
+  .clientGrid {
+    grid-template-columns: 1fr;
+  }
 }
